--- a/app/views/pages/miservicios.html.erb
+++ b/app/views/pages/miservicios.html.erb
@@ -44,14 +44,12 @@
 
           <th>Tipo Servicio</th>
           <th>Acciones</th>
-          <th style="display:none">Estado</th>
+          <th>Estado</th>
         </tr>
         </thead>
         <tbody>
         <% @servicios.each do |servicio| %>
             <tr>
-
-
               <td>
                 <%= servicio.name %>
               </td>
@@ -60,12 +58,27 @@
                 <%= servicio.type_service.name  if servicio.type_service %>
               </td>
 
-
               <td>
-                <%= link_to 'Editar', miserviciosedit_path(servicio.id), :class=>'btn btn-info' %>
+                <% if servicio.active == 1 %>
+                   <%= link_to 'Editar', miserviciosedit_path(servicio.id), :class=>'btn btn-info' %>
+                <% end %>
               </td>
 
+              <td>
 
+                <% if servicio.active == 1 %>
+                   <%= link_to  "/estatus-update/service/#{servicio.id}", :class=>'btn btn-danger' do %>
+                     <i class="fa fa-times"></i>
+                   <% end %>
+                <% elsif servicio.active == 0 %>
+                   <%= link_to  "/estatus-update/service/#{servicio.id}", :class=>'btn btn-success' do %>
+                     <i class="fa fa-check"></i>
+                   <% end %>
+                <% elsif servicio.active == 3 %>
+                   Inactivo por el admin
+                <% end %>
+
+              </td>
 
 
             </tr>
