se estandariza la vista

--- a/app/views/shared/_form_service.html.erb
+++ b/app/views/shared/_form_service.html.erb
@@ -1,7 +1,15 @@
 <div class="row">
+
   <div class="col-md-4">
     <div class="form-group">
-      <%= f.label :name, 'Nombre de servicio' %>
+      <%= f.label :nit, 'NIT' %>
+      <%= f.text_field :nit, :class =>'form-control'  %>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="form-group">
+      <%= f.label :name, 'Nombre almacen de servicio' %>
       <%= f.text_field :name, :class =>'form-control'  %>
     </div>
   </div>
@@ -13,33 +21,37 @@
     </div>
   </div>
   
+</div>
+
+<div class="row">
+
+
   <div class="col-md-4">
     <div class="form-group">
       <%= f.label :email, 'Email' %>
       <%= f.email_field :email, :class =>'form-control', minlength: 1 %>
     </div>
   </div>
-</div>
-
-<div class="row">
-  <div class="col-md-6">
+  
+  <div class="col-md-4">
     <div class="form-group">
       <%= f.label :address, 'Dirección' %>
       <%= f.text_field :address, :class =>'form-control'  %>
     </div>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-4">
     <div class="form-group">
       <%= f.label :horario, 'Horario' %>
       <%= f.collection_select :horario, @horas,:first,:first,{},{class: 'form-control text_field'} %>
     </div>
   </div>
- </div>
+
+</div>
 
 <div class="row">
 
-  <div class="col-md-6">
+  <div class="col-md-12">
     <div class="form-group">
       <%= f.label :type_truck_id, 'Tipo de servicio' %>
       <%= f.collection_select :type_service_id, TypeService.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
@@ -49,15 +61,14 @@
 </div>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-4">
     <div class="form-group">
       <%= f.label :state_id, 'Departamento' %>
       <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
     </div>
   </div>
 
-
-  <div class="col-md-6">
+  <div class="col-md-4">
     <div class="form-group">
       <%= f.label :city_id, 'Ciudad' %>
       <% if @service.city_id.nil? %>
@@ -65,6 +76,13 @@
       <% else %>
           <%= f.collection_select(:city_id, City.getByState(@service.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
       <% end %>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="form-group">
+      <%= f.label :url_map, 'Link mapa' %>
+      <%= f.url_field :url_map, :class =>'form-control'  %>
     </div>
   </div>
 
