--- a/app/views/pages/repuesto.html.erb
+++ b/app/views/pages/repuesto.html.erb
@@ -33,7 +33,7 @@
                 <div class="table-responsive">
                   <table class="table"><tbody>
                   <tr class="nymou"><td>Ubicación:</td><td class="pull-right"><%= @extra.state.name if @extra.state %> - <%= @extra.city.name  if  @extra.city %></td></tr>
-                  <tr class="nymou"><td>Precio:</td><td class="pull-right"> <%= number_to_currency( @extra.price,  precision: 0, delimiter: '.') %></td></tr>
+                  <tr class="nymou"><td>NIT:</td><td class="pull-right"> <%= @extra.nit %></td></tr>
                   <tr class="nymou"><td>Teléfono:</td><td class="pull-right"><%= @extra.phone %></td></tr>
                   <tr class="nymou"><td>Email:</td><td class="pull-right"><%= @extra.email %></td></tr>
                   <tr class="nymou"><td>Horario:</td><td class="pull-right"><%= @extra.horario %></td></tr>
