--- a/app/views/pages/mirepuestosedit.html.erb
+++ b/app/views/pages/mirepuestosedit.html.erb
@@ -14,101 +14,9 @@
 
             <% if !@extraLateUpdate %>
                 <!--nombre repuesto y tipo de camion-->
-                <div class="row">
-                    <div class="col-md-5 col-md-offset-1">
-                        <div class="form-group">
-                            <%= f.label :name, 'Nombre de repuesto' %>
-                            <%= f.text_field :name, :class =>'form-control'  %>
-                        </div>
-                    </div>
-
-                    <div class="col-md-5">
-                        <div class="form-group">
-                            <%= f.label :type_truck_id, 'Tipo de camion' %>
-                            <%= f.collection_select :type_truck_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-                        </div>
-                    </div>
-                </div>
-                <!--precio y marca-->
-                <div class="row">
-                    <div class="col-md-5 col-md-offset-1">
-                        <div class="form-group">
-                            <%= f.label :price, 'Precio' %>
-                            <%= f.number_field :price, :class =>'form-control text_field'  %>
-                        </div>
-                    </div>
-
-                    <div class="col-md-5">
-
-                        <div class="form-group">
-                            <%= f.label :brand_extra_id, 'Marca de Repuesto' %>
-                            <%= f.collection_select :brand_extra_id, BrandExtra.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-                        </div>
-                    </div>
-                </div>
-                <!--Telefono y Email-->
-                <div class="row">
-                  <div class='col-md-5 col-md-offset-1'>
-                    <div class="form-group">
-                      <%= f.label :phone, 'Teléfono' %>
-                      <%= f.number_field :phone, :class =>'form-control', maxlength: 11  %>
-                    </div>
-                  </div>
-                  <div class="col-md-5">
-                    <div class="form-group">
-                      <%= f.label :email, 'Email' %>
-                      <%= f.email_field :email, :class =>'form-control', minlength: 1 %>
-                    </div>
-                  </div>
-                </div>                
-                <!--Direccion y horario-->
-                <div class="row">
-                    <div class="col-md-5 col-md-offset-1">
-                        <div class="form-group">
-                            <%= f.label :address, 'Dirección' %>
-                            <%= f.text_field :address, :class =>'form-control'  %>
-                        </div>
-                    </div>
-                    <div class="col-md-5">
-                        <div class="form-group">
-                            <%= f.label :horario, 'Horario de atencion' %>
-                            <%= f.collection_select :horario, @horas,:first,:first,{},{class: 'form-control text_field'} %>
-                        </div>
-                    </div>
-                </div>
-                <!--Departamento y ciudad-->
-                <div class="row">
-                    <div class="col-md-5 col-md-offset-1">
-                        <div class="form-group">
-                            <%= f.label :state_id, 'Departamento' %>
-                            <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-                        </div>
-                    </div>
-
-                    <div class="col-md-5">
-                        <div class="form-group">
-                            <%= f.label :city_id, 'Ciudad' %>
-                            <%= f.collection_select :city_id, @cities.order(:name),:id,:name, {}, { class: 'form-control'} %>
-                        </div>
-                    </div>
-                </div>
-                <!-- Imagenes -->
-                <%= render partial: 'shared/imagenes', locals:{ object: f } %>
-
-                <div class="row">
-                    <div class="col-md-10 col-md-offset-1">
-                        <%= f.label :description, 'Descripccion' %>
-                        <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/> <br/> <br/>
-                    </div>
-                </div>
+                <%= render partial: 'shared/form_extra', locals:{ f: f} %>
             <% else %>
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <%= f.label :price, 'Precio' %>
-                            <%= f.number_field :price, :class =>'form-control text_field'  %>
-                        </div>
-                    </div>
                     <!--Telefono y Email-->                
                     <div class='col-md-4'>
                         <div class="form-group">
@@ -124,8 +32,8 @@
                     </div>
                 </div>
             <% end %>
-
             <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: mirepuestos_path } %>
+       
         <% end %>
 
     </div>
