--- a/app/views/pages/repuesto.html.erb
+++ b/app/views/pages/repuesto.html.erb
@@ -38,6 +38,9 @@
                   <tr class="nymou"><td>Email:</td><td class="pull-right"><%= @extra.email %></td></tr>
                   <tr class="nymou"><td>Horario:</td><td class="pull-right"><%= @extra.horario %></td></tr>
                   <tr class="nymou"><td>Dirección:</td><td class="pull-right"><%= @extra.address %></td></tr>
+                  <% unless @extra.url_map.blank? %>
+                    <tr class="nymou"><td>Google map:</td><td class="pull-right"><%= link_to 'Aqui ', @extra.url_map %></td></tr>
+                  <% end %>
                   </tbody></table>
                 </div><!-- /.table-responsive -->
               </div><!-- /.module-body -->
