--- a/app/views/pages/miserviciosedit.html.erb
+++ b/app/views/pages/miserviciosedit.html.erb
@@ -22,8 +22,8 @@
                         
                         <div class="col-md-4">
                             <div class="form-group">
-                                <%= f.label :telefono, 'Telefono' %>
-                                <%= f.number_field :telefono, :class =>'form-control'  %>
+                                <%= f.label :phone, 'Telefono' %>
+                                <%= f.number_field :phone, :class =>'form-control'  %>
                             </div>
                         </div>
                         <div class="col-md-4">
