--- a/app/views/shared/_form_service.html.erb
+++ b/app/views/shared/_form_service.html.erb
@@ -53,8 +53,7 @@
 
   <div class="col-md-12">
     <div class="form-group">
-      <%= f.label :type_truck_id, 'Tipo de servicio' %>
-      <%= f.collection_select :type_service_id, TypeService.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+      <%= f.association :type_services, as: :check_boxes, item_wrapper_tag: :div, item_wrapper_class: "", label: 'Tipos de servicios' %>
     </div>
   </div>
 
