--- a/app/views/pages/miservicios.html.erb
+++ b/app/views/pages/miservicios.html.erb
@@ -55,7 +55,11 @@
               </td>
 
               <td>
-                <%= servicio.type_service.name  if servicio.type_service %>
+                <% if servicio.type_services %>
+                  <% servicio.type_services.each do |type_ser| %>
+                    <%= type_ser.name %>
+                  <% end %>
+                <% end %>
               </td>
 
               <td>
