--- a/app/views/pages/miserviciosedit.html.erb
+++ b/app/views/pages/miserviciosedit.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col-md-12">
 
-    <%= form_for @service, :url => miserviciosedit_path, method: :post do |f|  %>
+    <%= simple_form_for @service, :url => miserviciosedit_path, method: :post do |f|  %>
         <% if @serviceLateUpdate %>
             <div class="row">
                 <div class="col-md-4">
