se agrega la relacion al modal de la busqueda

--- a/app/views/shared/_form_service.html.erb
+++ b/app/views/shared/_form_service.html.erb
@@ -48,17 +48,16 @@
   </div>
 
 </div>
-
+<hr>
 <div class="row">
-
   <div class="col-md-12">
     <div class="form-group">
-      <%= f.association :type_services, as: :check_boxes, item_wrapper_tag: :div, item_wrapper_class: "", label: 'Tipos de servicios' %>
+      <%= f.label :type_services, 'Tipos de servicios' %>
+      <%= f.association :type_services, as: :check_boxes, item_wrapper_tag: :div, item_wrapper_class: "col-md-4", label: false %>
     </div>
   </div>
-
 </div>
-
+<hr>
 <div class="row">
   <div class="col-md-4">
     <div class="form-group">
