--- a/app/views/shared/_form_search_services.html.haml
+++ b/app/views/shared/_form_search_services.html.haml
@@ -14,7 +14,7 @@
             TIPO DE
             %b SERVICIO
         .attribute_list
-          =# f.select(:type_service_id_eq, options_from_collection_for_select(TypeService.order(:id), :id,:name), {prompt: 'Selecciona'}, { class:  'form-control', id: 'state_service'})
+          = f.select(:type_services_id_eq, options_from_collection_for_select(TypeService.order(:id), :id,:name), {prompt: 'Selecciona'}, { class:  'form-control', id: 'state_service'})
     %p
       %fieldset.attribute_fieldset
         %label.attribute_label.attribute-key{:for => "group_1"}
