--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -64,7 +64,7 @@
 			  		<% end %>
 
 					<!--volquetas 2-->
-					<% if params[:v] == '2' %>
+					<% if params[:v] == '2'|| @truck.type_truck_id==2 %>
 
 						<div class="row">
 						  <div class="col-md-6">
@@ -111,7 +111,7 @@
 					<% end %>
 
 					<!--Camion 3-->
-					<% if params[:v] == '3' %>
+					<% if params[:v] == '3' || @truck.type_truck_id==3 %>
 						
 						<div class="row">
 
@@ -144,14 +144,14 @@
 					<% end %>
 
 					<!--buses 4-->
-					<% if params[:v] == '4' %>
+					<% if params[:v] == '4'|| @truck.type_truck_id==4 %>
 
 						<%= render partial: 'shared/busyvan', locals:{ f:f} %>
 
 					<% end %>
 
 					<!-- trailers 5-->
-					<% if params[:v] == '5' %>
+					<% if params[:v] == '5'|| @truck.type_truck_id==5 %>
 
 
 						<div class="row">
@@ -233,7 +233,7 @@
 					<% end %>
 
 					<!--VANS 6-->
-					<% if params[:v] == '6' %>
+					<% if params[:v] == '6'|| @truck.type_truck_id==6 %>
 
 						<div class="row">
 
