se agrega el mucho a muchos de repuestos para agregar y editar

--- a/app/views/admin/extras/new.html.erb
+++ b/app/views/admin/extras/new.html.erb
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="col-md-12">
 
-    <%= form_for @extra, :url => admin_extras_path, :method=>'post' do |f|  %>
+    <%= simple_form_for @extra, :url => admin_extras_path, :method=>'post' do |f|  %>
       <%= render partial: 'shared/form_extra', locals:{ f: f} %>
       <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: admin_extras_path } %>
     <% end %>
