--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -33,5 +33,8 @@
             <div  id="tabla" class="table-responsive">
                 <%= render partial: 'tableResult' %>
             </div>
+            <div id='paginator'>
+                <%= render partial: 'includes/paginator', locals: {object: objects} %>
+            </div>
         </div>
     </div>
