--- a/app/views/admin/offers/index.js.erb
+++ b/app/views/admin/offers/index.js.erb
@@ -2,4 +2,4 @@
  * Created by mario on 18-09-2015.
  */
 $('#tabla').html("<%= escape_javascript(render( partial: 'resultTable' ))%>");
-//$('#paginador').html("<%= escape_javascript(paginate(@planes_filter, :remote => true))%>");
+$('#paginador').html("<%= escape_javascript(paginate(@planes_filter, :remote => true))%>");
