--- a/app/views/admin/states/_tableResult.erb
+++ b/app/views/admin/states/_tableResult.erb
@@ -1,10 +1,10 @@
 <div id='tabla' class="table-responsive">
   <table class="table table-bordered table-hover table-striped">
     <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Acciones</th>
-    </tr>
+      <tr>
+        <th>Nombre</th>
+        <th>Acciones</th>
+      </tr>
     </thead>
     <tbody>
     <% @states_filter.each do |state| %>
@@ -18,12 +18,10 @@
             <%= link_to 'Eliminar', {:controller => 'admin/states', :action => 'destroy', :id => state.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
           </td>
         </tr>
-    <% end %>
-
-
+      <% end %>
     </tbody>
-
-
-
   </table>
 </div>
+<!--
+  <%= render partial: "includes/paginator_admin" , locals: {object: @states_filter}%>
+-->
