--- a/app/views/admin/type_truck/index.html.erb
+++ b/app/views/admin/type_truck/index.html.erb
@@ -11,10 +11,7 @@
 
 <!-- /.row -->
 <% if flash[:notice] %>
-
-<%= render partial: 'shared/flashNoticeMessage' %>
-
-
+  <%= render partial: 'shared/flashNoticeMessage' %>
 <% end %>
 
 <!-- /.row -->
@@ -32,9 +29,6 @@
 
 <div class="row">
   <div class="col-lg-12">
-
-
-
     <div class="table-responsive">
       <table class="table table-bordered table-hover table-striped">
         <thead>
@@ -62,17 +56,14 @@
               </td>
             </tr>
         <% end %>
-
-
         </tbody>
-
-
-
       </table>
     </div>
-
-
-
+    <div class='row'>
+      <div id='paginator'>
+        <%= paginate @types %>
+      </div>
+    </div>
   </div>
 </div>
 <!-- /.row -->
