se mejora el rendimineto de la busqueda a nivel de repuestos

--- a/app/views/shared/_type_extras.html.haml
+++ b/app/views/shared/_type_extras.html.haml
@@ -22,4 +22,4 @@
                     %ul.links.list-unstyled
                       - type.brand_extras.each do |brand|
                         %li
-                          = link_to brand.name , "/repuesto-tipo/#{type.id}/#{brand.id}"
+                          = link_to brand.name , "/repuesto-tipo/#{type.id}/#{brand.id}", remote: true
