fix remote del paginador

--- a/app/views/includes/_paginator_admin.html.erb
+++ b/app/views/includes/_paginator_admin.html.erb
@@ -1,5 +1,5 @@
 <div class = 'clearfix filters-container text-right' >
   <div class= 'pagination-container' >
-     <%= paginate object %>
+     <%= paginate object , remote: true%>
   </div>
 </div>
