dandole margen a las vistas del admin

--- a/app/views/admin/customers/_tableResult.html.erb
+++ b/app/views/admin/customers/_tableResult.html.erb
@@ -67,7 +67,6 @@
 
   <% end %>
   </tbody>
-
-
-
 </table>
+                
+<%= render partial: 'includes/paginator_admin', locals: {object:  @customers_filter} %>
