--- a/app/views/admin/trucks/_resultTrucks.erb
+++ b/app/views/admin/trucks/_resultTrucks.erb
@@ -1,5 +1,4 @@
 
-
   <div class="table-responsive">
     <table class="table table-bordered table-hover table-striped">
       <thead>
@@ -64,13 +63,8 @@
             
         </tr>
       <% end %>
-
-
       </tbody>
-
-
-
     </table>
   </div>
-
+<%= render partial: "includes/paginator_admin" , locals: {object: @trucks_filter}%>
 
