--- a/app/views/admin/users/_tableResult.html.haml
+++ b/app/views/admin/users/_tableResult.html.haml
@@ -17,3 +17,4 @@
 					%td
 						= link_to 'Editar', edit_admin_user_path(object.id), :class=>'btn btn-info'
 						= link_to 'Eliminar',{controller: 'admin/users',action: :destroy , id: object.id}, data: {:confirm => 'Estas seguro de eliminar este elemento?'}, method: :DELETE, :class=>'btn btn-danger'
+= render partial: "includes/paginator_admin" , locals: {object: objects}
