se arregla bug conlas imagenes

--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -265,7 +265,7 @@
 								</div>
 
 							<!-- Imagenes -->
-							<%= render partial: 'shared/imagenes', locals:{ object: f } %> <br/> <br/> <br/> <br/>
+							<%= render partial: 'shared/imagenes', locals:{ object: f , anuncio: @truck} %> <br/> <br/> <br/> <br/>
 
 				      <%= render partial: 'shared/camposGeneralesII', locals:{ f: f } %> <br/> <br/> <br/> <br/>
 
