--- a/app/views/admin/trucks/_form.html.erb
+++ b/app/views/admin/trucks/_form.html.erb
@@ -247,7 +247,7 @@
               </div>
             </div>
 
-            <%= render partial: 'shared/busyvan', locals: {f: f} %>
+            <%= render partial: 'shared/busyvan', locals: {f: f, anuncio: @truck} %>
 
           <% end %>
 
