--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -300,7 +300,7 @@
                 </div>
 
                 <!-- Imagenes -->
-                <%= render partial: 'shared/imagenes', locals:{ object: f } %> <br/> <br/> <br/> <br/>
+                <%= render partial: 'shared/imagenes', locals:{ object: f , , anuncio: @truck} %> <br/> <br/> <br/> <br/>
 
                 <%= render partial: 'shared/camposGeneralesII', locals:{ f: f } %> <br/> <br/> <br/> <br/>
 
