--- a/app/views/shared/_form_service.html.erb
+++ b/app/views/shared/_form_service.html.erb
@@ -93,4 +93,4 @@
   </div>
 </div>
 
-<%= render partial: 'shared/imagenes', locals:{ object: f } %>
+<%= render partial: 'shared/imagenes', locals:{ object: f , anuncio: @service} %>
