--- a/app/views/shared/_imagenes.erb
+++ b/app/views/shared/_imagenes.erb
@@ -3,7 +3,7 @@
 	  	<div class="col-md-4">
 			<div class="form-group form-el">
 		  		<%= object.label :picture1, 'Imagen 1' %>
-		  		<%= image_tag @truck.picture1(:thumb),size:'150x150' %>
+		  		<%= image_tag anuncio.picture1(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture1  %>
 			</div>
 	  	</div>
@@ -11,7 +11,7 @@
 	  	<div class="col-md-4">
 			<div class="form-group form-el">
 		  		<%= object.label :picture2, 'Imagen 2' %>
-		  		<%= image_tag @truck.picture2(:thumb),size:'150x150' %>
+		  		<%= image_tag anuncio.picture2(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture2  %>
 			</div>
 	  	</div>
@@ -19,7 +19,7 @@
 	  	<div class="col-md-4">
 			<div class="form-group form-el">
 		  		<%= object.label :picture3, 'Imagen 3' %>
-		  		<%= image_tag @truck.picture3(:thumb),size:'150x150' %>
+		  		<%= image_tag anuncio.picture3(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture3  %>
 			</div>
 	  	</div>
@@ -28,7 +28,7 @@
 	  	<div class="col-md-4">
 			<div class="form-group form-el">
 		  		<%= object.label :picture4, 'Imagen 4' %>
-		  		<%= image_tag @truck.picture4(:thumb),size:'150x150' %>
+		  		<%= image_tag anuncio.picture4(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture4 %>
 			</div>
 	  	</div>
@@ -37,7 +37,7 @@
 	  	<div class="col-md-4">
 			<div class="form-group form-el">
 		  		<%= object.label :picture5, 'Imagen 5' %>
-		  		<%= image_tag @truck.picture5(:thumb),size:'150x150' %>
+		  		<%= image_tag anuncio.picture5(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture5  %>
 			</div>
 	  	</div>
