--- a/app/views/shared/_contrailer.erb
+++ b/app/views/shared/_contrailer.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-12">
 		<label for="">   Se vende con trailer? </label><br/>
 
-			<%= f.radio_button :sevendecontrailer, 'Si', :checked => true %> Si
+			<%= f.radio_button :sevendecontrailer, 'Si', :checked => false %> Si
 			<%= f.radio_button :sevendecontrailer, 'No', :checked => false %> No
 
 		<script >
