--- a/app/views/pages/repuesto.html.erb
+++ b/app/views/pages/repuesto.html.erb
@@ -41,6 +41,7 @@
                   <% unless @extra.url_map.blank? %>
                     <tr class="nymou"><td>Google map:</td><td class="pull-right"><%= link_to 'Aqui ', @extra.url_map %></td></tr>
                   <% end %>
+                  <tr class ="nymou"><td>Ofrecemos:</td><td class="pull-right"><%= @extra.brand_extras.map {|x| x.name }.join(',') %></td></tr>
                   </tbody></table>
                 </div><!-- /.table-responsive -->
               </div><!-- /.module-body -->
