--- a/app/views/pages/servicio.html.erb
+++ b/app/views/pages/servicio.html.erb
@@ -41,7 +41,7 @@
                   <tr class="nymou"><td>Horario:</td><td class="pull-right"><%= @service.horario %></td></tr>
                   <tr class="nymou"><td>Dirección:</td><td class="pull-right"><%= @service.address %></td></tr>
                   <% unless @service.url_map.blank? %>
-                    <tr class="nymou"><td>Google map:</td><td class="pull-right"><%= link_to 'Aqui ', @service.url_map %></td></tr>
+                    <tr class="nymou"><td>Google map:</td><td class="pull-right"><%= link_to 'Aqui ', @service.url_map, target: "_blank" %></td></tr>
                   <% end %>
                   <tr class ="nymou"><td>Ofrecemos:</td><td class="pull-right"><%= @service.type_services.map {|x| x.name }.join(',') %></td></tr>
                   </tbody></table>
